fix language select radio alignment

--- a/app/css/responsive.css
+++ b/app/css/responsive.css
@@ -610,6 +610,7 @@ b {
     min-height: 15px;
     margin-left: 10px;
     min-width: 10px;
+    max-width: 15px;
 }
 
 /*----------------------------------------------*/
